@@ -624,6 +624,8 @@ BEGIN
     LTEXT           "",IDC_NUMAUTHORVALUE,267,41,37,8,0,WS_EX_RIGHT
     LTEXT           "",IDC_NUMCOMMITSVALUE,267,53,37,8,0,WS_EX_RIGHT
     LTEXT           "",IDC_NUMFILECHANGESVALUE,267,65,37,8,0,WS_EX_RIGHT
+    CONTROL         "",IDC_SKIPPER,"msctls_trackbar32",TBS_AUTOTICKS | TBS_BOTH | TBS_NOTICKS | TBS_TOOLTIPS | WS_TABSTOP,140,186,100,15
+    LTEXT           "Noise level:",IDC_SKIPPERLABEL,7,190,115,8
 END
 
 IDD_REPOCREATE DIALOGEX 0, 0, 186, 90
@@ -1877,6 +1879,7 @@ BEGIN
     IDS_STATGRAPH_COMMITSBYAUTHORX "author"
     IDS_STATGRAPH_COMMITSBYAUTHORY "commits"
     IDS_STATGRAPH_STATS     "Statistics"
+    IDS_STATGRAPH_OTHERGROUP "Others"
 END
 
 STRINGTABLE 
