@@ -45,11 +45,13 @@ void CStatGraphDlg::DoDataExchange(CDataExchange* pDX)
 	CResizableStandAloneDialog::DoDataExchange(pDX);
 	DDX_Control(pDX, IDC_GRAPH, m_graph);
 	DDX_Control(pDX, IDC_GRAPHCOMBO, m_cGraphType);
+	DDX_Control(pDX, IDC_SKIPPER, m_Skipper);
 }
 
 
 BEGIN_MESSAGE_MAP(CStatGraphDlg, CResizableStandAloneDialog)
 	ON_CBN_SELCHANGE(IDC_GRAPHCOMBO, OnCbnSelchangeGraphcombo)
+	ON_WM_HSCROLL()
 END_MESSAGE_MAP()
 
 
@@ -71,6 +73,10 @@ BOOL CStatGraphDlg::OnInitDialog()
 	temp.LoadString(IDS_STATGRAPH_COMMITSBYAUTHOR);
 	sel = m_cGraphType.AddString(temp);
 	m_cGraphType.SetItemData(sel, 3);
+
+	m_Skipper.SetRange(0, 100);
+	m_Skipper.SetPos(10);
+	m_Skipper.SetPageSize(5);
 
 	AddAnchor(IDC_GRAPHTYPELABEL, TOP_LEFT);
 	AddAnchor(IDC_GRAPH, TOP_LEFT, BOTTOM_RIGHT);
@@ -106,7 +112,8 @@ BOOL CStatGraphDlg::OnInitDialog()
 	AddAnchor(IDC_FILECHANGESEACHWEEKAVG, TOP_RIGHT);
 	AddAnchor(IDC_FILECHANGESEACHWEEKMIN, TOP_RIGHT);
 	AddAnchor(IDC_FILECHANGESEACHWEEKMAX, TOP_RIGHT);
-
+	AddAnchor(IDC_SKIPPER, BOTTOM_LEFT, BOTTOM_RIGHT);
+	AddAnchor(IDC_SKIPPERLABEL, BOTTOM_LEFT);
 	AddAnchor(IDOK, BOTTOM_RIGHT);
 	EnableSaveRestore(_T("StatGraphDlg"));
 	ShowStats();
@@ -152,6 +159,9 @@ void CStatGraphDlg::ShowLabels(BOOL bShow)
 	GetDlgItem(IDC_FILECHANGESEACHWEEKAVG)->ShowWindow(nCmdShow);
 	GetDlgItem(IDC_FILECHANGESEACHWEEKMIN)->ShowWindow(nCmdShow);
 	GetDlgItem(IDC_FILECHANGESEACHWEEKMAX)->ShowWindow(nCmdShow);
+
+	GetDlgItem(IDC_SKIPPER)->ShowWindow(bShow ? SW_HIDE : SW_SHOW);
+	GetDlgItem(IDC_SKIPPERLABEL)->ShowWindow(bShow ? SW_HIDE : SW_SHOW);
 }
 
 void CStatGraphDlg::ShowCommitsByAuthor()
@@ -193,11 +203,25 @@ void CStatGraphDlg::ShowCommitsByAuthor()
 
 	std::map<stdstring, LONG>::iterator iter;
 	iter = authorcommits.begin();
+	CString sOthers(MAKEINTRESOURCE(IDS_STATGRAPH_OTHERGROUP));
+	int nOthers = 0;
 	while (iter != authorcommits.end()) 
 	{
-		nGroup = m_graph.AppendGroup(iter->first.c_str());
-		graphData->SetData(nGroup, iter->second);
+		if (iter->second < (m_parAuthors->GetCount() * m_Skipper.GetPos() / 200))
+		{
+			nOthers += iter->second;
+		}
+		else
+		{
+			nGroup = m_graph.AppendGroup(iter->first.c_str());
+			graphData->SetData(nGroup, iter->second);
+		}
 		iter++;
+	}
+	if (nOthers)
+	{
+		nGroup = m_graph.AppendGroup(sOthers);
+		graphData->SetData(nGroup, nOthers);
 	}
 
 	// Paint the graph now that we're through.
@@ -208,6 +232,7 @@ void CStatGraphDlg::ShowCommitsByDate()
 {
 	if ((m_parAuthors==NULL)||(m_parDates==NULL)||(m_parFileChanges==NULL))
 		return;
+	CString sOthers(MAKEINTRESOURCE(IDS_STATGRAPH_OTHERGROUP));
 	ShowLabels(FALSE);
 	m_graph.Clear();
 
@@ -225,6 +250,19 @@ void CStatGraphDlg::ShowCommitsByDate()
 	temp.LoadString(IDS_STATGRAPH_COMMITSBYDATE);
 	m_graph.SetGraphTitle(temp);
 
+
+	std::map<stdstring, LONG> author_commits;
+	for (int i=0; i<m_parAuthors->GetCount(); ++i)
+	{
+		stdstring author = stdstring(m_parAuthors->GetAt(i));
+		if (author_commits.find(author) != author_commits.end())
+		{
+			author_commits[author] += 1;
+		}
+		else
+			author_commits[author] = 1;
+	}
+
 	//first find the number of authors available
 	size_t numAuthors = 0;
 
@@ -232,7 +270,10 @@ void CStatGraphDlg::ShowCommitsByDate()
 	for (int i=0; i<m_parAuthors->GetCount(); ++i)
 	{
 		stdstring author = stdstring(m_parAuthors->GetAt(i));
-		authors[author] = -11;
+		if (author_commits[author] < (m_parAuthors->GetCount() * m_Skipper.GetPos() / 200))
+			authors[wide_string((LPCWSTR)sOthers)] = -11;
+		else
+			authors[author] = -11;
 	}
 	numAuthors = authors.size();
 	
@@ -320,10 +361,20 @@ void CStatGraphDlg::ShowCommitsByDate()
 		stdstring author = stdstring(m_parAuthors->GetAt(i));
 		if (authorcommits.find(author) != authorcommits.end())
 		{
-			authorcommits[author] += 1;
+			if (authors.find(author) != authors.end())
+				authorcommits[author] += 1;
+			else
+				authorcommits[stdstring((LPCTSTR)sOthers)] += 1;
 		}
 		else
-			authorcommits[author] = 1;
+		{
+			if (authors.find(author) != authors.end())
+				authorcommits[author] = 1;
+			else if (authorcommits.find(stdstring((LPCTSTR)sOthers)) == authorcommits.end())
+				authorcommits[stdstring((LPCTSTR)sOthers)] = 1;
+			else
+				authorcommits[stdstring((LPCTSTR)sOthers)] += 1;
+		}
 	}
 
 	MyGraphSeries * graphData = new MyGraphSeries();
@@ -331,11 +382,14 @@ void CStatGraphDlg::ShowCommitsByDate()
 	while (iter != authors.end()) 
 	{
 		if (authorcommits.find(iter->first) != authorcommits.end())
+		{
 			graphData->SetData(iter->second, authorcommits[iter->first]);
+		}
 		else
 			graphData->SetData(iter->second, 0);
 		iter++;
 	}
+
 	temp.Format(_T("%d"), week);
 	graphData->SetLabel(temp);
 	m_graph.AddSeries(*graphData);
@@ -685,4 +739,25 @@ int CStatGraphDlg::GetWeek(const CTime& time)
 	}
 	// return result
 	return iWeekOfYear;
+}
+
+void CStatGraphDlg::OnHScroll(UINT nSBCode, UINT nPos, CScrollBar* pScrollBar)
+{
+	if (nSBCode == TB_THUMBTRACK)
+		return CDialog::OnHScroll(nSBCode, nPos, pScrollBar);
+
+	switch (m_cGraphType.GetItemData(m_cGraphType.GetCurSel()))
+	{
+	case 1:
+		ShowStats();
+		break;
+	case 2:
+		ShowCommitsByDate();
+		break;
+	case 3:
+		ShowCommitsByAuthor();
+		break;
+	}
+
+	CDialog::OnHScroll(nSBCode, nPos, pScrollBar);
 }
