@@ -416,7 +416,9 @@
 #define IDS_PROC_EXPORT_2               1260
 #define IDC_UNVERSIONEDRECURSE          1260
 #define IDS_PROC_EXPORT_3               1261
+#define IDC_SKIPPER                     1261
 #define IDS_PROC_EXPORT_4               1262
+#define IDC_SKIPPERLABEL                1262
 #define IDS_PROC_COPY_SUCCESS           1263
 #define IDS_PROC_SETTINGS_TITLE         1264
 #define IDS_PROC_OVERWRITE_CONFIRM      1266
@@ -675,6 +677,7 @@
 #define IDS_STATGRAPH_COMMITSBYAUTHORX  3904
 #define IDS_STATGRAPH_COMMITSBYAUTHORY  3905
 #define IDS_STATGRAPH_STATS             3906
+#define IDS_STATGRAPH_OTHERGROUP        3907
 #define IDS_SVNERR_CHECKPATHORURL       4000
 #define IDS_SVNERR_RUNCLEANUP           4001
 #define IDS_SVNERR_UPDATEFIRST          4002
@@ -754,7 +757,7 @@
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        217
 #define _APS_NEXT_COMMAND_VALUE         32796
-#define _APS_NEXT_CONTROL_VALUE         1261
+#define _APS_NEXT_CONTROL_VALUE         1263
 #define _APS_NEXT_SYMED_VALUE           195
 #endif
 #endif
